2017-02-01  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 40470: Test/D07multibyte.ztst: make the test work also on
	OSs which always use ASCII collation (e.g. macOS).

2017-01-31  Peter Stephenson  <p.stephenson@samsung.com>

	* 40466: Makefile.in: update depencencies so autoheader is run
	after autoconf when configuration input files change.

2017-01-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 40469: Src/Zle/complete.c: change strategy from 40453 to use
	patcompile(PAT_HEAPDUP) instead of signal queueing.

2017-01-30  Peter Stephenson  <p.stephenson@samsung.com>

	* 40465: Test/C04funcdef.ztst, Test/V06parameter.ztst: use
	method from cd tests to output current directory.

2017-01-29  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	*  Zhiming Wang: 40450, 40451: Completion/Unix/Command/_swift,
	Completion/Unix/Command/_openstack: Add new swift language
	completion and attempt to resolve against openstack swift command.

2017-01-28  Barton E. Schaefer  <schaefer@zsh.org>

	* 40453: Src/Modules/zpty.c, Src/Modules/zutil.c,
	Src/Zle/compctl.c, Src/Zle/complete.c, Src/Zle/computil.c,
	Src/Zle/zle_hist.c, Src/builtin.c, Src/cond.c, Src/glob.c,
	Src/loop.c, Src/options.c, Src/parse.c: signal handler safety
	for callers of patcompile(PAT_STATIC), which is not re-entrant.

	* 40439: Src/zsh.h: PAT_HEAPDUP definition just for clarity

2017-01-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 40440: ../Doc/Zsh/mod_parameter.yo, Modules/parameter.c,
	hashtable.c, ../Test/C04funcdef.ztst, ../Test/V06parameter.ztst:
	Add $functions_source to zsh/parameter to help find where
	functions where loaded from.

2017-01-27  Peter Stephenson  <p.stephenson@samsung.com>

	* Zach Whaley: 40200: Completion/Unix/Command/_perforce: update
	for latest Perforce versions.

	* 40425: configure.ac, Src/watch.c: HAVE_* tests for getutxent
	etc.

2017-01-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 40423: Src/params.c, Test/E01options.ztst: similar for type