@@ -1,3 +1,8 @@
+2017-02-01  Daniel Shahaf  <d.s@daniel.shahaf.name>
+
+	* 40460: Src/params.c, Test/E01options.ztst: WARN_NESTED_VAR:
+	Don't warn when assigning to a slice of an existing array
+
 2017-02-01  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>
 
 	* 40470: Test/D07multibyte.ztst: make the test work also on
